--- a/noise_detect_app/app/src/main/res/layout/activity_main.xml
+++ b/noise_detect_app/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.daei.soundmeter.activity.MainActivity">
+    tools:context="com.sunhongbin.noiseDetect.activity.MainActivity">
 
-    <me.daei.soundmeter.widget.SoundDiscView
+    <com.sunhongbin.noiseDetect.widget.SoundDiscView
         android:id="@+id/soundDiscView"
-        android:layout_width="344dp"
-        android:layout_height="368dp"
+        android:layout_width="300dp"
+        android:layout_height="320dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="22dp"
         android:background="@drawable/noise_disc" />
 
     <Button
@@ -21,9 +22,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="203dp"
-        android:layout_marginRight="203dp"
-        android:layout_marginBottom="38dp"
+        android:layout_marginEnd="204dp"
+        android:layout_marginRight="204dp"
+        android:layout_marginBottom="36dp"
         android:text="开始收集" />
 
     <Button
@@ -33,8 +34,31 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="222dp"
-        android:layout_marginLeft="222dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginLeft="210dp"
         android:layout_marginBottom="36dp"
         android:text="上传数据" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="297dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="65dp"
+        android:layout_weight="2.89"
+        android:scrollbars="vertical"
+        android:text=" "
+        android:textColor="#000000" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/start"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="28dp"
+        android:layout_toEndOf="@+id/doUpload"
+        app:srcCompat="@android:drawable/ic_menu_mylocation" />
 </RelativeLayout>
