--- a/noise_detect_app/app/src/main/res/values/colors.xml
+++ b/noise_detect_app/app/src/main/res/values/colors.xml
@@ -18,4 +18,12 @@
     <color name="iron">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="blue">#38ADFF</color>
+    <color name="light_blue">#5bc0de</color>
+    <color name="green">#5cb85c</color>
+    <color name="orange">#f0ad4e</color>
+    <color name="red">#d9534f</color>
+    <color name="deep_red">#FF4040</color>
+
+
 </resources>
