--- a/noise_detect_app/app/src/main/res/layout/activity_main.xml
+++ b/noise_detect_app/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.sunhongbin.noiseDetect.widget.SoundDiscView
+            <com.sunhongbin.noiseDetect.view.SoundDiscView
                 android:id="@+id/soundDiscView"
                 android:layout_width="250dp"
                 android:layout_height="260dp"
