--- a/noise_detect_app/app/src/main/res/layout/about.xml
+++ b/noise_detect_app/app/src/main/res/layout/about.xml
@@ -1,78 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:adroid="http://schemas.android.com/apk/res/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    adroid:layout_width="match_parent"
-    adroid:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
 
     <android.support.v7.widget.Toolbar
-        adroid:id="@+id/toolbar"
+        android:id="@+id/toolbar"
         app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        adroid:layout_width="match_parent"
-        adroid:layout_height="46dp"
-        adroid:background="@drawable/border_bottom">
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:background="@drawable/border_bottom">
 
         <TextView
 
-            adroid:layout_width="wrap_content"
-            adroid:layout_height="wrap_content"
-            adroid:layout_gravity="center"
-            adroid:textColor="@color/black"
-            adroid:text="@string/about"
-            adroid:textSize="20sp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:text="@string/about"
+            android:textSize="20sp" />
 
     </android.support.v7.widget.Toolbar>
 
 
     <TextView
-        adroid:id="@+id/icon_about"
-        adroid:layout_marginTop="126dp"
-        adroid:layout_width="wrap_content"
-        adroid:layout_height="wrap_content"
-        adroid:text="@string/app_name"
-        adroid:layout_centerInParent="true"
-        adroid:layout_alignParentTop="true"
-        adroid:textColor="@color/black"
-        adroid:textSize="30sp"
+        android:id="@+id/icon_about"
+        android:layout_marginTop="126dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/black"
+        android:textSize="30sp"
         />
 
 
     <TextView
-        adroid:id="@+id/main_about"
-        adroid:layout_marginTop="1dp"
-        adroid:layout_width="wrap_content"
-        adroid:layout_height="wrap_content"
-        adroid:text="@string/app_version"
-        adroid:textSize="13sp"
-        adroid:layout_below="@+id/icon_about"
-        adroid:layout_centerHorizontal="true"
+        android:id="@+id/main_about"
+        android:layout_marginTop="1dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_version"
+        android:textSize="13sp"
+        android:layout_below="@+id/icon_about"
+        android:layout_centerHorizontal="true"
         />
 
 
     <LinearLayout
-        adroid:layout_below="@+id/main_about"
-        adroid:layout_centerHorizontal="true"
-        adroid:layout_alignParentBottom="true"
-        adroid:orientation="vertical"
-        adroid:layout_width="match_parent"
-        adroid:layout_height="wrap_content">
+        android:layout_below="@+id/main_about"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
     <RelativeLayout
-        adroid:layout_width="match_parent"
-        adroid:layout_height="wrap_content"
-        adroid:layout_marginTop="20dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
         <include layout="@layout/about_table"/>
 
      <TextView
-            adroid:layout_width="match_parent"
-            adroid:layout_height="wrap_content"
-            adroid:paddingBottom="6dp"
-            adroid:text="@string/bottom_about"
-            adroid:gravity="center"
-            adroid:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="6dp"
+            android:text="@string/bottom_about"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
             />
     </RelativeLayout>
 
@@ -81,11 +81,11 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        adroid:layout_width="66dp"
-        adroid:layout_height="66dp"
-        adroid:src="@drawable/icon"
-        adroid:layout_below="@+id/toolbar"
-        adroid:layout_centerHorizontal="true"
-        adroid:layout_marginTop="10dp" />
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        android:src="@drawable/icon"
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
