--- a/noise_detect_app/app/src/main/res/layout/buttongroup_level.xml
+++ b/noise_detect_app/app/src/main/res/layout/buttongroup_level.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:adroid="http://schemas.android.com/apk/res/android"
-    adroid:layout_width="match_parent"
-    adroid:layout_height="20dp"
-    adroid:layout_margin="5dp"
-    adroid:gravity="center"
-    adroid:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="20dp"
+    android:layout_margin="5dp"
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <!-- 红黄绿三个圆-->
 
     <Button
-        adroid:id="@+id/btn_red"
-        adroid:layout_width="18dp"
-        adroid:layout_height="18dp"
-        adroid:layout_marginRight="2dp"
-        adroid:background="@drawable/radius_red" />
+        android:id="@+id/btn_red"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginRight="2dp"
+        android:background="@drawable/radius_red" />
 
     <Button
-        adroid:id="@+id/btn_orange"
-        adroid:layout_width="18dp"
-        adroid:layout_height="18dp"
-        adroid:layout_marginLeft="2dp"
-        adroid:layout_marginRight="2dp"
-        adroid:background="@drawable/radius_orange" />
+        android:id="@+id/btn_orange"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:background="@drawable/radius_orange" />
 
     <Button
-        adroid:id="@+id/btn_green"
-        adroid:layout_width="18dp"
-        adroid:layout_height="18dp"
-        adroid:layout_marginLeft="2dp"
-        adroid:background="@drawable/radius_green" />
+        android:id="@+id/btn_green"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="2dp"
+        android:background="@drawable/radius_green" />
 
 </LinearLayout>
